feat: donathon timer display and more commands

--- a/widgets/timer/main.html
+++ b/widgets/timer/main.html
@@ -7,11 +7,11 @@
  *
  * SPDX-License-Identifier: EPL-2.0
 -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div id="main-container">
   <div class="counter">
     <div class="timer"></div>
     <div class="status"></div>
     <div class="points"></div>
   </div>
-  <div class="notification"></div>
 </div>
