--- a/widgets/timer/main.html
+++ b/widgets/timer/main.html
@@ -13,6 +13,7 @@
     <div class="timer"></div>
     <div class="status"></div>
     <div class="points"></div>
+    <div class="double-mode">2x</div>
   </div>
   <div class="notification"></div>
 </div>
